--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,6 @@ nav a:focus{
   grid-template-columns: 1fr 5fr 1fr;
   row-gap: 30px; 
 }
-  /* -1.25: container grid rows format [FAILED]*/
-
 
 /* Requirements 6-10 here: */
 .intro{
@@ -121,25 +119,25 @@ nav a:focus{
 }
 
 .about{
-  grid-column: 2;
-  grid-row: 1;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
 }
 
 .clients{
-  grid-column: 2;
-  grid-row: 2;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 
 }
 
 .method{
-  grid-column: 2;
-  grid-row: 3;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
 
 }
 
 .contact{
-  grid-column: 2;
-  grid-row: 4;
+  grid-column: 2 / 3;
+  grid-row: 4 / 5;
 
 }
 
@@ -150,28 +148,28 @@ nav a:focus{
 .about-image{
   grid-column: 1 / span 3;
   max-height: 500px;
-  grid-row: 1;
+  grid-row: 1 / 2;
   overflow: hidden;
 }
 
 .clients-image{
   grid-column: 1 / span 3;
   max-height: 500px;
-  grid-row: 2;
+  grid-row: 2 / 3;
   overflow: hidden;
 }
 
 .method-image{
   grid-column: 1 / span 3;
   max-height: 500px;
-  grid-row: 3;
+  grid-row: 3 / 4;
   overflow: hidden;
 }
 
 .contact-image{
   grid-column: 1 / span 3;
   max-height: 500px;
-  grid-row: 4;
+  grid-row: 4 / 5;
   overflow: hidden;
 }
 
